deploy/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meshr-local
  labels:
    app.kubernetes.io/part-of: meshr
    meshr.social/environment: local
